--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "postcss": "^8.4.27",
     "react": "^18.2.0",
